--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -53,9 +53,7 @@ javac.source=21
 javac.target=21
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+    ${build.classes.dir}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
